added some flags for preview features